# tiamat

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  chunker.cpp  default.nix  dumpobj.cpp  index.sql  package.nix  reset.bash  shell.nix
cmake/Modules/: FindCapnproto.cmake  FindKJ.cmake
samples/Juliet/: create_per_cwe_files.py
samples/Juliet/testcases/CWE416_Use_After_Free/: main_linux.cpp
samples/chops/: LICENSE
samples/use_after_free/: .gitignore  Makefile
samples/whole/: goaccess
src/: analyses.rs  bvlist.rs  chop.rs  lib.rs  main.rs  schema.rs  sema.rs  stack.rs  trace.rs  typing.rs  ubvs.rs  var.rs
src/typing/: mod.rs  repr.rs
test_outputs/: CWE416
tests/: chops.rs  uaf.rs
tools/: bsdcpio.sh  bsdcpio_profile.sh  build_samples.bash  chops.sh  gnome-nettool_profile.sh  goaccess.sh  goaccess_profile.sh  juliet.sh  juliet_profile.sh  large_tests.sh  pg.bash  pg_debug.bash  pg_profile.bash  resume.bash  small_tests.sh
