[package]

name = "tiamat"
version = "0.0.1"
authors = [ "Matthew Maurer <maurer@matthewmaurer.org>" ]
license = "MIT"
description = "Binary analysis using Holmes"
repository = "https://github.com/maurer/tiamat"

[dependencies]
num = "*"
url = "*"
getopts = "*"
postgres_array = "0.6"
bit-vec = "0.4"
rustc-serialize = "0.3"

[dependencies.postgres]
version = "0.11"
features = ["bit-vec", "rustc-serialize"]

[dependencies.holmes]
git = "https://github.com/maurer/holmes"

[dependencies.bap]
git = "https://github.com/maurer/bap-rust"
features = ["holmes_support", "json"]
