[package]

name = "tiamat"
version = "0.0.1"
authors = [ "Matthew Maurer <maurer@matthewmaurer.org>" ]
license = "MIT"
description = "Binary analysis using Holmes"
repository = "https://github.com/maurer/tiamat"

[dependencies]
num = "*"
url = "*"
getopts = "*"
postgres_array = "*"
bit-vec = "0.4"
rustc-serialize = "0.3"
log = "0.3"
env_logger = "0.3"
mktemp = "*"

[dependencies.postgres]
version = "0.13"
features = ["with-bit-vec", "with-rustc-serialize"]

[dependencies.holmes]
path = "../holmes"

[dependencies.bap]
path = "../bap-rust"
features = ["holmes_support", "json"]

[profile.release]
debug = true
